...
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/ic_arrow_back_2" />
...
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/end_date_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

...
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLength="300" />
...
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <!-- Max Attendees Switch -->
                <Switch
                    android:id="@+id/max_attendee_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:checked="false"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/max_attendee_container"
                app:layout_constraintBottom_toTopOf="@+id/qrcode_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/max_attendee_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Max Attendees"
                    android:visibility="gone"
                    android:inputType="numberSigned"
                    android:maxLength="3" />
...
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/max_attendee_input_layout" />

            <!-- QR Code Create Button -->
            <Button
                android:id="@+id/qrcode_create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/create_new"
...
                app:strokeWidth="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qrcode_create_button" />

            <!-- Create Event Button -->
            <Button
                android:id="@+id/create_event_button"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/primaryDarkColor"
                android:text="@string/create_event"
...
