...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:descendantFocusability="afterDescendants" >

                        <androidx.appcompat.widget.SearchView
                            android:id="@+id/searchView"
                            android:layout_width="385dp"
                            android:layout_height="50dp"
                            app:closeIconTint="@color/white"
                            app:defaultQueryHint="Explore the Hot Events"
                            app:iconifiedByDefault="false"
                            android:imeOptions="actionSearch"
...
                        android:fontFamily="@font/monsterrat_regular"
                        android:textSize="25sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/searchLayout" />

<!--                    <ImageView-->
<!--                        android:id="@+id/signedUpEvents_button"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintTop_toBottomOf="@id/searchLayout"-->
<!--                        android:layout_marginEnd="30dp"-->
<!--                        android:layout_marginTop="25dp"-->
...
                        android:fontFamily="@font/monsterrat_regular"
                        android:textSize="25sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

<!--                    <ImageView-->
<!--                        android:id="@+id/upcomingEventsList_button"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"-->
<!--                        android:layout_marginEnd="20dp"-->
<!--                        android:src="@drawable/baseline_arrow_forward_ios_24"/>-->
...
